@@ -62,18 +62,6 @@ h2(#push_stream_store_messages). push_stream_store_messages <a name="push_stream
 Whether or not message queuing is enabled.
 
 
-h2(#push_stream_keepalive). push_stream_keepalive <a name="push_stream_keepalive" href="#">&nbsp;</a>
-
-*syntax:* _push_stream_keepalive on | off_
-
-*default:* _off_
-
-*context:* _location (push_stream_publisher, push_stream_channels_statistics)_
-
-*release version:* _0.2.4_
-
-Enable keepalive connections, on publisher or channels statistics locations.
-
 h2(#push_stream_channel_info_on_publish). push_stream_channel_info_on_publish <a name="push_stream_channel_info_on_publish" href="#">&nbsp;</a>
 
 *syntax:* _push_stream_channel_info_on_publish on | off_
