@@ -83,8 +83,6 @@ http {
             # store messages in memory
             push_stream_store_messages              off;
 
-            push_stream_keepalive                   on;
-
             # Message size limit
             # client_max_body_size MUST be equal to client_body_buffer_size or
             # you will be sorry.
